@@ -2920,17 +2920,17 @@ SCIP_RETCODE SCIPnlrowRecalcPseudoActivity(
    {
       assert(nlrow->linvars[i] != NULL);
 
-      val1 = SCIPvarGetBestBound(nlrow->linvars[i]);
+      val1 = SCIPvarGetBestBoundLocal(nlrow->linvars[i]);
       nlrow->pseudoactivity += nlrow->lincoefs[i] * val1;
    }
 
    for( i = 0; i < nlrow->nquadelems; ++i )
    {
-      val1 = SCIPvarGetBestBound(nlrow->quadvars[nlrow->quadelems[i].idx1]);
+      val1 = SCIPvarGetBestBoundLocal(nlrow->quadvars[nlrow->quadelems[i].idx1]);
       if( val1 == 0.0 )
          continue;
 
-      val2 = SCIPvarGetBestBound(nlrow->quadvars[nlrow->quadelems[i].idx2]);
+      val2 = SCIPvarGetBestBoundLocal(nlrow->quadvars[nlrow->quadelems[i].idx2]);
       nlrow->pseudoactivity += nlrow->quadelems[i].coef * val1 * val2;
    }
 
@@ -2944,7 +2944,7 @@ SCIP_RETCODE SCIPnlrowRecalcPseudoActivity(
       SCIP_CALL( SCIPsetAllocBufferArray(set, &varvals, n) );
 
       for( i = 0; i < n; ++i )
-         varvals[i] = SCIPvarGetBestBound(SCIPexprtreeGetVars(nlrow->exprtree)[i]);
+         varvals[i] = SCIPvarGetBestBoundLocal(SCIPexprtreeGetVars(nlrow->exprtree)[i]);
 
       SCIP_CALL( SCIPexprtreeEval(nlrow->exprtree, varvals, &val1) );
       nlrow->pseudoactivity += val1;
@@ -3766,7 +3766,7 @@ SCIP_RETCODE nlpAddVars(
       {
          assert(nlp->initialguess != NULL);
 
-         nlp->initialguess[nlp->nvars+i] = SCIPvarGetBestBound(var);
+         nlp->initialguess[nlp->nvars+i] = SCIPvarGetBestBoundLocal(var);
       }
 
       /* if we have a feasible NLP solution, then it remains feasible
@@ -3774,8 +3774,8 @@ SCIP_RETCODE nlpAddVars(
        */
       if( nlp->solstat <= SCIP_NLPSOLSTAT_FEASIBLE )
       {
-         SCIPvarSetNLPSol(var, set, SCIPvarGetBestBound(var));
-         nlp->primalsolobjval += SCIPvarGetObj(var) * SCIPvarGetBestBound(var);
+         SCIPvarSetNLPSol(var, set, SCIPvarGetBestBoundLocal(var));
+         nlp->primalsolobjval += SCIPvarGetObj(var) * SCIPvarGetBestBoundLocal(var);
          nlp->solstat = SCIP_NLPSOLSTAT_FEASIBLE;
       }
 
@@ -5524,7 +5524,7 @@ SCIP_RETCODE SCIPnlpGetPseudoObjval(
 
       *pseudoobjval = 0.0;
       for( i = 0; i < nlp->nvars; ++i )
-         *pseudoobjval += SCIPvarGetObj(nlp->vars[i]) * SCIPvarGetBestBound(nlp->vars[i]);
+         *pseudoobjval += SCIPvarGetObj(nlp->vars[i]) * SCIPvarGetBestBoundLocal(nlp->vars[i]);
    }
 
    return SCIP_OKAY;
